# zk-autoresearch

./: .gitignore  CLAUDE.md  README.md  WORKFLOW.md  improvement_ideas.md  loop.py  requirements.txt  run_benchmark.sh  setup.sh  test_loop.py  watch.py
.githooks/: pre-commit
.github/workflows/: test.yml
correctness-checker/: Cargo.toml  rust-toolchain.toml
correctness-checker/src/: main.rs
experiment_logs/: agent_infra_pr_body.md  table.md
experiment_logs/Plonky3/NTT/: table.md
experiment_logs/experiment_1/: experiments_kept.jsonl
experiment_logs/experiment_2/: experiment_full.jsonl
experiment_logs/leanMultisig/: setup_leanmultisig_server.sh
experiment_logs/leanMultisig/experiment_1/: correctness.sh  eval.sh  program.md
experiment_logs/leanMultisig/experiment_logup_sumcheck/: TODO.md  iters.tsv  program.md
experiment_logs/leanMultisig/experiment_poseidon/: program.md
experiment_logs/leanMultisig/experiment_sumcheck/: iters.tsv  program.md
experiment_logs/leanMultisig/experiment_sumcheck_deep/: iters.tsv  program.md
experiment_logs/leanMultisig/shared/: README.md  config.env  correctness.sh  eval_e2e.sh  eval_gate.sh  eval_iai.sh  eval_paired.sh  eval_poseidon.sh  eval_revert_ab.sh  test_integrity.sha256  verify_post_experiment.sh
experiment_logs/linea/: linea_server_setup.sh
experiment_logs/linea/experiment_vortex_koalabear/: a1_mulaccbyelement.patch.md  iters.tsv  program.md
experiment_logs/linea/shared/: config.env  correctness.sh  eval_bench.sh  (+1 more)
leanMultisig-bench/: Cargo.toml
leanMultisig-bench/benches/: xmss_leaf.rs
(+37 files in other folders)
